# jgap

./: .gitignore  CMakeLists.txt  ReadMe.md  generate_parsers.cmake  iron.json  vcpkg.json
include/: Version.hpp.in
include/core/: InRamJgapFit.hpp  JgapTabulate.hpp
include/core/cutoff/: CosCutoff.hpp  CutoffFunction.hpp  PerriotPolynomialCutoff.hpp
include/core/descriptors/: Descriptor.hpp  EamDescriptor.hpp  ThreeBodyDescriptor.hpp  TwoBodyDescriptor.hpp
include/core/descriptors/eam/: EamDensityCalculator.hpp
include/core/descriptors/eam/pair_functions/: CoscutoffPairFunction.hpp  (+3 more)
include/core/descriptors/kernels/: EamSE.hpp  Kernel.hpp  ThreeBodySE.hpp  TwoBodySE.hpp
include/core/descriptors/sparsification/: SampleSpaceUniformSparsifier.hpp  Sparsifier.hpp
include/core/fit/: CompositeFit.hpp  Fit.hpp  InRamJgapFit.hpp  IsolatedAtomFit.hpp  JgapTabulate.hpp  SsdJgapFit.hpp  Tabulate.hpp
include/core/kernels/: EamKernelSE.hpp  Kernel.hpp  ThreeBodySE.hpp  TwoBodySE.hpp
include/core/matrices/sigmas/: ForceScaleSigmaRules.hpp  PerConfigTypeRegularizationRules.hpp  RegularizationRules.hpp  SigmaRules.hpp  SimpleRegularizationRules.hpp  SimpleSigmaRules.hpp
include/core/neighbours/: NeighbourFinder.hpp
include/core/potentials/: CompositePotential.hpp  IsolatedAtomPotential.hpp  JgapPotential.hpp  JtabGapPotential.hpp  Potential.hpp  SplinePairPotential.hpp  ZblPotential.hpp
include/data/: BasicDataTypes.hpp  TabulationData.hpp
include/data/descriptors/kernels/: EamKernelIndex.hpp  ThreeBodyKernelIndex.hpp  TwoBodyKernelIndex.hpp
include/data/kernels/: EamKernelIndex.hpp  ThreeBodyKernelIndex.hpp  TwoBodyKernelIndex.hpp
include/data/params/: DescriptorParams.hpp  EamDescriptorParams.hpp  ThreeBodyDescriptorParams.hpp  TwoBodyDescriptorParams.hpp
include/io/convert/: QuipXmlConverter.hpp
include/io/log/: CurrentLogger.hpp  Logger.hpp  SpdlogWrapper.hpp  StdoutLogger.hpp
include/io/params/: JsonParamReader.hpp
include/io/parse/: ParserRegistry.hpp
include/memory/: LargeMatrix.hpp  MatrixBlock.hpp  SimpleLargeMatrix.hpp
include/utils/: AtomicNumbers.hpp  Utils.hpp
resources/dmol-screening-fit/: dmol-fit.json  fit-dmol.py
resources/param-samples/: fit-params.json
resources/xyz-samples/: feni-test.xyz  iter-3-3-test.xyz
src/: ConvertQuipXmlApp.cpp  FitApp.cpp  PredictApp.cpp  TabulateApp.cpp  main.cpp
src/core/: CutoffFunction.cpp  InRamJgapFit.cpp
src/core/cutoff/: CosCutoff.cpp  PerriotPolynomialCutoff.cpp
src/core/descriptors/: Descriptor.cpp  EamDescriptor.cpp  ThreeBodyDescriptor.cpp  TwoBodyDescriptor.cpp
src/core/descriptors/eam/: EamDensityCalculator.cpp
src/core/descriptors/kernel/: EamSE.cpp  ThreeBodySE.cpp  TwoBodySE.cpp
src/core/descriptors/sparsification/: SampleSpaceUniformSparsifier.cpp
src/core/fit/: CompositePotentialFit.cpp  InRamJgapFit.cpp  IsolatedAtomFit.cpp  SsdJgapFit.cpp  Tabulate.cpp
src/core/kernel/: EamKernelSE.cpp  ThreeBodySE.cpp  TwoBodySE.cpp
src/core/matrices/sigmas/: ForceScaleSigmaRules.cpp  PerConfigTypeRegularizationRules.cpp  SimpleRegularizationRules.cpp  SimpleSigmaRules.cpp
src/core/neighbours/: NeighbourFinder.cpp
src/core/potentials/: CompositePotential.cpp  IsolatedAtomPotential.cpp  JgapPotential.cpp  SplinePairPotential.cpp  ZblPotential.cpp
src/data/: BasicDataTypes.cpp
src/io/convert/: QuipXmlConverter.cpp
src/io/log/: SpdlogWrapper.cpp  StdoutLogger.cpp
src/io/params/: JsonParamReader.cpp
src/utils/: Utils.cpp
test/core/: TestInRamJgap.cpp
test/core/descriptors/: TestEamDescriptor.cpp  TestThreeBodyDescriptor.cpp  TestTwoBodyDescriptor.cpp
test/core/descriptors/eam/: TestEamDensityCalculator.cpp
test/core/fit/: TestInRamJgap.cpp  TestIsolatedAtomFit.cpp
test/core/neighbours/: TestNeighbourList.cpp
test/core/potentials/: TestIsolatedAtomPotential.cpp  TestZblPotential.cpp
test/core/utils/: TestVirials.cpp
test/resources/fit-param-samples/: default-fit-params.json  default-tabulation-params.json
test/resources/jgap-pots/: 2b-desc.json  3b-desc.json  feni-out-deleted3b.jgap.json  feni-out.jgap.json
test/resources/xyz-samples/: fe-only-compact.xyz  ni-test.xyz  ni-train.xyz
test/resources/zbl/: pairpot.xml  parse_quip.py  quip-test.out  quip-test.out.xyz
(+15 files in other folders)
